# ecmongpu

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
bench/: CMakeLists.txt  bench_monprod.cu
bench/yield/: base.ini  generate.py  parse.py  print.py
bench/yield/input/: bw128.input  bw160.input  bw192.input  bw224.input  bw256.input  bw288.input  bw320.input  bw352.input  bw384.input  bw96.input
cmake/: version.cmake
example/: config.ini  input.txt  input2.txt
include/: build_config.h.in  cudautil.h  log.h  version.h.in
include/config/: config.h  handler.h  ini.h
include/ecc/: naf.h  twisted_edwards.h
include/ecm/: batch.h  ecm.h  factor_task.h  stage1.h  stage2.h  twisted_edwards.h
include/input/: input.h
include/mp/: gmp_conversion.h  mp.h  mp_montgomery.h
include/test/: testutil.h
resource/: CMakeLists.txt  bouvier-8192  naf4096  naf50000  naf8192  trpl-batch-4096  trpl-batch-50000  trpl-batch-8192  trpl4096
src/: CMakeLists.txt  cuda-ecm.c  log.c  tcp-client.c
src/config/: config.cu  handler.cu  ini.c
src/ecc/: naf.cu  tw_ed_common.cu  tw_ed_extended.cu  tw_ed_inverted.cu
src/ecm/: batch.cu  ecm.cu  factor_task.cu  stage1.cu  stage2.cu  tw_ed_extended.cu  tw_ed_inverted.cu
src/gmp_conv/: gmp_conversion.c
src/input/: file.c  parser.c  tcp.c
src/mp/: mp.cu  mp_montgomery.cu
tests/: CMakeLists.txt
tests/cpu/ecc/: test_ecc.c  test_point_on_curve.c
tests/cpu/ecm/: test_factor_list_sort.c
tests/cpu/mp/: test_mp_add.c  test_mp_cmp.c  test_mp_conversion.c  test_mp_gt.c  test_mp_mul.c  test_mp_mul_ui.c  test_mp_setbit.c  test_mp_srlimbs.c  test_mp_sub.c  test_mp_sub_mod.c  test_mp_testbit.c
tests/cpu/mp_montgomery/: test_mp_monexp.c  test_mp_moninv.c  test_mp_monprod.c  test_mp_montrans.c
tests/cpu/naf/: test_naf.c
tests/gpu/ecc/: test_ecc.cu  test_point_on_curve.cu
tests/gpu/ecm/: test_bouvier8192.cu  test_naf_smul.cu  test_naf_smul_nafarr.cu  test_trpl_batch_smul.cu  test_trplchain_smul.cu
tests/gpu/mp/: test_mp_add.cu  test_mp_cmp.cu  test_mp_copy.cu  test_mp_gt.cu  test_mp_mul.cu  test_mp_sub.cu  test_mp_sub_mod.cu
tests/gpu/mp_montgomery/: test_mp_monexp.cu  test_mp_moninv.cu  test_mp_monprod.cu  test_mp_monprod_distinct.cu  test_mp_monsquare.cu
